--- a/WebFormsIdentity/packages.config
+++ b/WebFormsIdentity/packages.config
@@ -22,7 +22,11 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.Owin" version="4.2.2" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="4.0.1" targetFramework="net45" />
@@ -34,7 +38,9 @@
   <package id="Microsoft.Owin.Security.Twitter" version="4.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="SendGrid" version="9.28.1" targetFramework="net45" />
+  <package id="starkbank-ecdsa" version="1.3.3" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
