--- a/WebFormsIdentity/WebFormsIdentity.csproj
+++ b/WebFormsIdentity/WebFormsIdentity.csproj
@@ -413,6 +413,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202301150527053_InitialCreate.cs" />
+    <Compile Include="Migrations\202301150527053_InitialCreate.Designer.cs">
+      <DependentUpon>202301150527053_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202301160905225_UnhashedPassword.cs" />
+    <Compile Include="Migrations\202301160905225_UnhashedPassword.Designer.cs">
+      <DependentUpon>202301160905225_UnhashedPassword.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
@@ -452,6 +461,14 @@
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202301150527053_InitialCreate.resx">
+      <DependentUpon>202301150527053_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202301160905225_UnhashedPassword.resx">
+      <DependentUpon>202301160905225_UnhashedPassword.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
