--- a/WebFormsIdentity/packages.config
+++ b/WebFormsIdentity/packages.config
@@ -6,6 +6,7 @@
   <package id="bootstrap" version="3.4.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="jQuery" version="3.4.1" targetFramework="net45" />
+  <package id="JWT" version="1.3.4" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.3" targetFramework="net45" />
@@ -42,5 +43,6 @@
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="SendGrid" version="9.28.1" targetFramework="net45" />
   <package id="starkbank-ecdsa" version="1.3.3" targetFramework="net45" />
+  <package id="Twilio" version="6.2.1" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
